# mdfx

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  OVERLAY-TEST.md  PLAN-badgefx-refactor.md  PLANNING.md  README.md  README.md.backup  README.template.md  test-frame.sh
.github/workflows/: ci.yml  release.yml  update-badges.yml
assets/: manifest.json
crates/badgefx/: Cargo.toml
crates/badgery/: Cargo.toml
crates/mdfx/: Cargo.toml
crates/mdfx-cli/: Cargo.toml
crates/mdfx-colors/: Cargo.toml
crates/mdfx-fetch/: Cargo.toml
crates/mdfx-icons/: Cargo.toml
crates/mdfx-icons/src/: lib.rs
data/: badges.json  components.json  frames.json  shields.json
docs/: API-GUIDE.md  ARCHITECTURE.md  BADGE-CRATE-EXTRACTION.md  BADGE-STYLES-PLANNING.md  COMPONENTS.md  CONTEXTS.md  DESIGN.md  FRAMES-DESIGN.md  PLANNING.md  README.md  ROADMAP.md  SPEC.md  STATE-MACHINE-GUIDE.md  TARGETS.md  TEMPLATE-SYNTAX.md  TESTING.md  UNICODE-EXPLAINED.md  _coverpage.md  _sidebar.md  index.html  parser-design.md
docs/guides/: ASSETS-GUIDE.md  CLI-GUIDE.md  COLORS-GUIDE.md  COMPONENTS-GUIDE.md  DATA-VIZ-GUIDE.md  DONUT-GAUGE-GUIDE.md  DONUT-GAUGE-GUIDE.template.md  FRAMES-GUIDE.md  GLYPHS-GUIDE.md  LSP-GUIDE.md  PROGRESS-GUIDE.md  PROGRESS-GUIDE.template.md  README.md  SWATCH-GUIDE.md  SWATCH-GUIDE.template.md  TECH-GUIDE.md  TEXT-STYLES-GUIDE.md  (+1 more)
examples/: README.md  basic-usage.rs  dashboard-showcase.md  dashboard-showcase.template.md  demo-input.md  demo-output.md  donut-gallery-rendered.md  donut-gallery.md  donuts-and-gauges-gallery-rendered.md  donuts-and-gauges-gallery.md  frame-debug.md  neon-tech-showcase.md  opus-creativity-showcase.md  opus-creativity-v2-showcase.md  opus-creativity.template.md  progress-gallery-rendered.md  progress-gallery.md  svg-creativity-showcase-rendered.md  svg-creativity-showcase.md  svg-creativity.template.md  tech-badges.md  tech-badges.template.md  tech-showcase.md  visual-showcase-rendered.md  visual-showcase.md
src/: badges.rs  components.rs  converter.rs  error.rs  frames.rs  lib.rs  parser.rs  primitive.rs  shields.rs
(+124 files in other folders)
