[workspace]
resolver = "2"
members = [
    "crates/mdfx",
    "crates/mdfx-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Dayna Blackwell <blackwellsystems@protonmail.com>"]
repository = "https://github.com/blackwell-systems/mdfx"
license = "MIT"
homepage = "https://github.com/blackwell-systems/mdfx"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
